classroom/assets/css/main.css
/* ... */
.course-activities-result p {
    padding: 0.5em;
    font-size: 1em;
    margin-bottom: 0;
    text-align: center;
    font-weight: bold;
}

.bilan-cell-course {
    min-height: 30px;
    min-width: 30px;
    margin: 0 0.4em;
    height: 100%;
    border: solid 1px transparent;
    border-radius: 10px;
    text-align: center;
    transition: all 0.1s ease-in-out;
}

.course-texte-result {
    font-weight: bold;
}

.course-text-success {
    text-align: center;
    font-weight: bold;
    color: var(--classroom-primary);
}

#Calque_2 {
    height: 30px;
}

.image-vh {
    height: 40vh !important;
}

.activity-custom-content {
    display: flex;
    justify-content: center;
}


.math-field-aligned {
    top: 0.5em;
}

.switcher {
    display: flex;
    flex-direction: row;
    height: 40px;
    margin-top: 3px;
    padding: 4px;
    background: var(--bg-1);
    border-radius: 2px;
    min-width: 200px;
    border-radius: 30px;
    border: solid 1px #ddd;
    position: relative;
}

.switcher:focus-within {
    outline: 2px solid var(--classroom-primary);
    outline-offset: 2px;
    border-color: var(--classroom-primary);
}

.theme-dark .switcher {
    background: #fff;
}

.switcher__input {
    position: absolute;
    clip: rect(0 0 0 0);
}

.switcher__label {
    min-width: 95px;
    font-size: 12px;
    line-height: 30px;
    color: var(--text-1);
    text-align: center;
    cursor: pointer;
    position: inherit;
    z-index: 10;
    transition: color 0.2s cubic-bezier(0.4, 0.0, 0.2, 1);
    will-change: transform;
}

.switcher__toggle {
    position: absolute;
    float: left;
    height: 30px;
    width: 95px;
    font-size: 12px;
    line-height: 30px;
    cursor: pointer;
    background-color: var(--classroom-primary);
    border-radius: 30px;
    left: 5px;
    top: 4px;
    transition: left 0.25s cubic-bezier(0.4, 0.0, 0.2, 1);
    will-change: transform;
}

.switcher__input:checked+.switcher__label {
    color: #fff;
}

.switcher__input:checked+.switcher__label {
    color: #fff;
}

.switcher__input--right:checked~.switcher__toggle {
    left: calc(100% - 99px);
}

.switcher__input--middle1:checked~.switcher__toggle {
    left: 99px;
}

.switcher__input--middle2:checked~.switcher__toggle {
    left: calc((95px * 2) + 4px);
}

.switcher__input--middle3:checked~.switcher__toggle {
    left: calc((95px * 3) + 4px);
}

.switcher__input--middle4:checked~.switcher__toggle {
    left: calc((95px * 4) + 4px);
}

.mnh-2-5 {
    min-height: 2.5em;
}

.w-fit-content {
    width: fit-content;
}


.fw7-primary {
    font-weight: 700;
    color: var(--classroom-primary);
}

.fw7-secondary {
    font-weight: 700;
    color: var(--classroom-secondary);
}

.fw7-uncolored {
    font-weight: 700;
}

.hint-one-page-course {
    text-align: center;
    border: 1px solid var(--classroom-secondary);
    border-radius: 50px;
    padding: 0.5em;
}

.one-page-course-activity-block {
    padding: 2em 3em;
    margin: 2em 0;
}

.simple-background {
    background: var(--classroom-background);
}

.tooltip {
    z-index: 30000;
}

.dropdown-menu.show {
    transform: translate(0px, 50px) !important;
}

.half-opacity {
    opacity: 0.5;
}

.full-opacity {
    opacity: 1;
}

th,
td {
    color: var(--classroom-text-0) !important;
}


.import-multiple-activities {
    width: 32px;
    border-radius: 3px;
    margin: 0 0.3em;
}

.top-left-return-btn {
    position: absolute;
    top: 0;
    left: 0;
    margin: 0.5em;
}

@media (max-width: 1280px) {
    .mobile-mt-2 {
        margin-top: 2em;
    }
}

.fs-large {
    font-size: large;
}

/* break point height > 870 */
.lti-iframe-height {
    min-height: 80vh;
}

@media (max-height: 1150px) {
    .lti-iframe-height {
        min-height: 78vh;
    }
}

@media (max-height: 950px) {
    .lti-iframe-height {
        min-height: 74vh;
    }
}

@media (max-height: 780px) {
    .lti-iframe-height {
        min-height: 70vh;
    }
}

@media (max-height: 600px) {
    .lti-iframe-height {
        min-height: 63vh;
    }
}

#my_calculator:focus,
#my_calculator:focus-within {
    border: 2px solid var(--classroom-primary) !important;
    outline: none;
    box-shadow: 0 0 0 0.2rem rgba(var(--classroom-primary-rgb), 0.25);
}

#word-search:hover {
  background-color: rgb(0 0 0 / 0.2);
}

#word-search:focus-visible {
  box-shadow: 0 0 0 0.2rem rgba(var(--classroom-primary-rgb), 0.25);
}

